<resources>
    <string name="app_name">Food Order</string>
    <string name="action_settings">Settings</string>
    <string name="slogan">No matter where you are whether you are at home, or in the office, or in the beach, we will find you and we will feed you!</string>
    <string name="sloganServer">We transport products to our customers as quickly as ex betrays</string>

    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_out">Sign Out</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="my_name">Salman Yousaf</string>
    <string name="menu">Menu</string>
    <string name="image">Image</string>
    <string name="place_order">Place Order</string>
    <string name="_1_000">$1,000</string>
    <string name="_12345678">12345678</string>
    <string name="_03234380625">03234380625</string>
    <string name="_0_00">$0.00</string>
    <string name="walton_road">Walton Road</string>
    <string name="shipping">shipping</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="title_activity_home_server">HomeActivityServer</string>
    <string name="upload">Upload</string>
    <string name="select">Select</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="title_activity_tracking_order">TrackingOrderActivity</string>
    <string name="remember_me">Remember me</string>
    <string name="food_description">Food Description</string>

    <string name="facebook_app_id">358682634886397</string>
    <string name="facebook_login_protocol_name">fb358682634886397</string>
</resources>
