<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Server.SignInServer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        tools:ignore="UselessLeaf,UselessParent">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editPhone"
            android:hint="@string/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:inputType="phone"
            android:text="@string/_03234380625"
            app:met_baseColor="#fff"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_minCharacters="11"
            app:met_primaryColor="#fff"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editPassord"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff"
            android:textColor="#fff"
            android:text="@string/_12345678"
            android:inputType="textPassword"
            app:met_baseColor="#fff"
            app:met_floatingLabel="highlight"
            app:met_minCharacters="8"
            app:met_primaryColor="#fff"/>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignIn"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:textColor="@android:color/white"
        android:text="@string/sign_in"
        android:background="@drawable/sign_in"
        tools:ignore="ButtonStyle" />

</RelativeLayout>