<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:elevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping"
            android:layout_below="@id/order_id"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/order_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_03234380625"
            android:layout_below="@id/order_status"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/order_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walton_road"
            android:layout_below="@id/order_phone"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="normal"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>