<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/cart_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cart_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_000"
            android:layout_below="@id/cart_item_name"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="normal"/>

        <ImageView
            android:id="@+id/cart_item_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/image" />


        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/cart_change_quantity"
            android:layout_width="100dp"
            android:layout_height="30dp"
            app:initialNumber="1"
            app:finalNumber="10"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

        </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>


    </RelativeLayout>

</android.support.v7.widget.CardView>