<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/food_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/overlayBackground"
            android:inputType="textCapSentences"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/colorPrimary"
            app:met_primaryColor="#fff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btnSelect"
                android:layout_margin="8dp"
                android:textColor="@android:color/white"
                android:text="@string/select"
                android:background="@color/colorPrimary"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btnUpload"
                android:layout_margin="8dp"
                android:textColor="@android:color/white"
                android:text="@string/upload"
                android:background="@color/colorPrimaryDark"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


</LinearLayout>

</android.support.v7.widget.CardView>